frontend part edited ~ added new page branches ~ next home page in small device not feel good solve that issue

--- a/branch.html
+++ b/branch.html
@@ -51,8 +51,8 @@
                    <a class="nav-link" href="brands">Brands</a>
                  </li>
                  <li class="nav-item">
-                  <a class="nav-link" href="branch">Branches</a>
-                </li>
+                   <a class="nav-link" href="branch">branches</a>
+                 </li>
                  <li class="nav-item dropdown">
                    <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" role="button" aria-expanded="false">
                      Products 
@@ -81,76 +81,23 @@
  <!-- banner -->
  <div class="banner">
     <div class="container">
-        <a class="pos-abs-title"> Brands </a>
+        <a class="pos-abs-title"> Branches </a>
     </div>
  </div>
  <!-- banner END-->
 
  <!--.................... about-section-1 ..............-->
- <section class="section-1 brands">
+ <section class="section-1 branch">
     <div class="container">
         <div class="row">
 
-            <div class="col-md-3 col-6">
+            <div class="col-md-4 col-9 mx-auto">
                 <div class="card">
-                    <img src="assets/img/logo/brands/toyota.png" alt="" srcset="">
+                    <div class="location"><i class="fa-solid fa-location-dot"></i></div>
+                    <div class="card-title">Musaffah M-7, Abu Dabhi</div>
                 </div>
             </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/nissan.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/lexus.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/mitsubish.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/honda.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/Caterpillar.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/Cummins.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/deutz.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/man.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/mercedes.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/Perkins.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card">
-                    <img src="assets/img/logo/brands/tadano.png" alt="" srcset="">
-                </div>
-            </div>  
+              
 
         </div>
     </div>
