--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="brands">Brands</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="branch">Branches</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" role="button" aria-expanded="false">
                   Products 
@@ -235,13 +238,18 @@
     <div class="row">
       <section class="section-1-2 scr-anime logo-sldr col-lg-12 mt-4">
       <div class="customer-logos slider">
-        <div class="slide"><img src="assets/img/logo/brands/Caterpillar.png" alt="" srcset=""></div>
-        <div class="slide"><img src="assets/img/logo/brands/Cummins.png" alt="" srcset=""></div>
-        <div class="slide"><img src="assets/img/logo/brands/deutz.png" alt="" srcset=""></div>
-        <div class="slide"><img src="assets/img/logo/brands/man.png" alt="" srcset=""></div>
         <div class="slide"><img src="assets/img/logo/brands/mercedes.png" alt="" srcset=""></div>
         <div class="slide"><img src="assets/img/logo/brands/Perkins.png" alt="" srcset=""></div>
         <div class="slide"><img src="assets/img/logo/brands/tadano.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/toyota.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/nissan.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/mitsubish.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/lexus.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/honda.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/Caterpillar.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/Cummins.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/deutz.png" alt="" srcset=""></div>
+        <div class="slide"><img src="assets/img/logo/brands/man.png" alt="" srcset=""></div> 
       </div>
       </section>
 
@@ -249,6 +257,22 @@
   </div>
 </section>
 <!--.................... section-1 aboutus END ......................... -->
+
+<!-- section-4 brands -->
+<section class="section-4 brand-section">
+  <div class="container">
+    <div class="row">
+      <div class="card">
+        <div class="col-md-6 cnts">
+          <div class="title">Drive with Confidence</div>
+          <div class="caption">Explore a World of Quality Spare Parts for Cars and Trucks!</div>
+          <div class="btn-div"><button class="btn" onclick="window.location.href='brands'">Explore</button></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+  <!--.................... section-4 brands END ......................... -->
 
 <!-- section-2 main-products -->
 <section class="section-2">
