--- a/products/footer.html
+++ b/products/footer.html
@@ -9,6 +9,7 @@
           <li><a href="../home">Home</a></li>
           <li><a href="../about">About Us</a></li>
           <li><a href="../brands">Brands</a></li>
+          <li><a href="../branch">Branches</a></li>
           <li><a href="../contact">Contact</a></li>
         </ul>
       </div>
