--- a/footer.html
+++ b/footer.html
@@ -44,7 +44,7 @@
     <div class="row ">
       <div class="col-12 text-center">
         <div class="copyright mt-5 pt-5">
-          <p><small>&copy; 2024 All Rights Reserved.</small></p>
+          <p><small>&copy; 2024 All Rights Reserved. / powered by <a href="https://iberrtech.com/" style="text-decoration: none; color: white;">iberrtechnologies</a></small></p>
         </div>
       </div>
     </div> 
